Reverted InlineLink info blurb from commit 3d770af because it was breaking accordion/tab/dropdown display types...improved some InlineLink CSS instead, and fixed a bug with ensuring the 'fake' record is visible

--- a/web/css/odr_wordpress.1.8.0.css
+++ b/web/css/odr_wordpress.1.8.0.css
@@ -5414,9 +5414,6 @@ input.ODRRenderPlugin_FileRenamer_config_item_name {
     content: "\7c\a0\7c";
 }
 
-.ODRInlineLink_icon {
+.ODRListHeader > .ODRInlineLink_icon {
     top: 10px;
-}
-.ODRInlineLink_blurb {
-    margin: 10px;
 }
